Fix a bug where a white screen flicker would occur

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,3 +7,11 @@
 .terminal-container {
   pointer-events: none;
 }
+
+.app-hidden {
+  opacity: 0;
+}
+
+.app-visible {
+  opacity: 1;
+}
